Profile modification and parsing
- Implemented logic that parses and persists cv data
- Implemented logic to allow modification and creation of new profile
  data
